src/compiler/common/antlr/pinsParser.java
// Generated from /home/amadej/PINSCompiler/src/pinsParser.g4 by ANTLR 4.13.1
package compiler.common.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class pinsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ARR=1, ELSE=2, FOR=3, FUN=4, IF=5, THEN=6, TYP=7, VAR=8, WHERE=9, WHILE=10, 
		DECLARE=11, OP_ADD=12, OP_SUB=13, OP_MUL=14, OP_DIV=15, OP_MOD=16, OP_AND=17, 
		OP_OR=18, OP_NOT=19, OP_EQ=20, OP_NEQ=21, OP_LT=22, OP_GT=23, OP_LEQ=24, 
		OP_GEQ=25, OP_LPARENT=26, OP_RPARENT=27, OP_LBRACKET=28, OP_RBRACKET=29, 
		OP_LBRACE=30, OP_RBRACE=31, OP_COLON=32, OP_SEMICOLON=33, OP_COMMA=34, 
		OP_ASSIGN=35, OP_VARARG=36, C_INTEGER=37, C_LOGICAL=38, C_STRING=39, AT_LOGICAL=40, 
		AT_INTEGER=41, AT_STRING=42, IDENTIFIER=43, COMMENT=44, WS=45;
	public static final int
		RULE_program = 0, RULE_definitions = 1, RULE_definitions2 = 2, RULE_definition = 3, 
		RULE_type_definition = 4, RULE_variable_definition = 5, RULE_function_definition = 6, 
		RULE_function_declaration = 7, RULE_type = 8, RULE_parameters = 9, RULE_parameters2 = 10, 
		RULE_parameter = 11, RULE_expression = 12, RULE_expression2 = 13, RULE_logical_ior_expression = 14, 
		RULE_logical_ior_expression2 = 15, RULE_logical_and_expression = 16, RULE_logical_and_expression2 = 17, 
		RULE_compare_expression = 18, RULE_compare_expression2 = 19, RULE_additive_expression = 20, 
		RULE_additive_expression2 = 21, RULE_multiplicative_expression = 22, RULE_multiplicative_expression2 = 23, 
		RULE_prefix_expression = 24, RULE_postfix_expression = 25, RULE_postfix_expression2 = 26, 
		RULE_atom_expression = 27, RULE_atom_expression2 = 28, RULE_atom_expression3 = 29, 
		RULE_atom_expression4 = 30, RULE_expressions = 31, RULE_expressions2 = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definitions", "definitions2", "definition", "type_definition", 
			"variable_definition", "function_definition", "function_declaration", 
			"type", "parameters", "parameters2", "parameter", "expression", "expression2", 
			"logical_ior_expression", "logical_ior_expression2", "logical_and_expression", 
			"logical_and_expression2", "compare_expression", "compare_expression2", 
			"additive_expression", "additive_expression2", "multiplicative_expression", 
			"multiplicative_expression2", "prefix_expression", "postfix_expression", 
			"postfix_expression2", "atom_expression", "atom_expression2", "atom_expression3", 
			"atom_expression4", "expressions", "expressions2"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'arr'", "'else'", "'for'", "'fun'", "'if'", "'then'", "'typ'", 
			"'var'", "'where'", "'while'", "'declare'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'&'", "'|'", "'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "';'", "','", "'='", 
			"'...'", null, null, null, "'logical'", "'integer'", "'string'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ARR", "ELSE", "FOR", "FUN", "IF", "THEN", "TYP", "VAR", "WHERE", 
			"WHILE", "DECLARE", "OP_ADD", "OP_SUB", "OP_MUL", "OP_DIV", "OP_MOD", 
			"OP_AND", "OP_OR", "OP_NOT", "OP_EQ", "OP_NEQ", "OP_LT", "OP_GT", "OP_LEQ", 
			"OP_GEQ", "OP_LPARENT", "OP_RPARENT", "OP_LBRACKET", "OP_RBRACKET", "OP_LBRACE", 
			"OP_RBRACE", "OP_COLON", "OP_SEMICOLON", "OP_COMMA", "OP_ASSIGN", "OP_VARARG", 
			"C_INTEGER", "C_LOGICAL", "C_STRING", "AT_LOGICAL", "AT_INTEGER", "AT_STRING", 
			"IDENTIFIER", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pinsParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pinsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(pinsParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			definitions();
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionsContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public Definitions2Context definitions2() {
			return getRuleContext(Definitions2Context.class,0);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			definition();
			setState(70);
			definitions2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Definitions2Context extends ParserRuleContext {
		public TerminalNode OP_SEMICOLON() { return getToken(pinsParser.OP_SEMICOLON, 0); }
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public Definitions2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions2; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitDefinitions2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definitions2Context definitions2() throws RecognitionException {
		Definitions2Context _localctx = new Definitions2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_definitions2);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OP_SEMICOLON:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(OP_SEMICOLON);
				setState(73);
				definitions();
				}
				break;
			case EOF:
			case OP_RBRACE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Function_declarationContext function_declaration() {
			return getRuleContext(Function_declarationContext.class,0);
		}
		public Type_definitionContext type_definition() {
			return getRuleContext(Type_definitionContext.class,0);
		}
		public Variable_definitionContext variable_definition() {
			return getRuleContext(Variable_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definition);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUN:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				function_definition();
				}
				break;
			case DECLARE:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				function_declaration();
				}
				break;
			case TYP:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				type_definition();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				variable_definition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_definitionContext extends ParserRuleContext {
		public TerminalNode TYP() { return getToken(pinsParser.TYP, 0); }
		public TerminalNode IDENTIFIER() { return getToken(pinsParser.IDENTIFIER, 0); }
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Type_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitType_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_definitionContext type_definition() throws RecognitionException {
		Type_definitionContext _localctx = new Type_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(TYP);
			setState(84);
			match(IDENTIFIER);
			setState(85);
			match(OP_COLON);
			setState(86);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_definitionContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(pinsParser.VAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(pinsParser.IDENTIFIER, 0); }
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Variable_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitVariable_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_definitionContext variable_definition() throws RecognitionException {
		Variable_definitionContext _localctx = new Variable_definitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(VAR);
			setState(89);
			match(IDENTIFIER);
			setState(90);
			match(OP_COLON);
			setState(91);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_definitionContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(pinsParser.FUN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(pinsParser.IDENTIFIER, 0); }
		public TerminalNode OP_LPARENT() { return getToken(pinsParser.OP_LPARENT, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode OP_RPARENT() { return getToken(pinsParser.OP_RPARENT, 0); }
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OP_ASSIGN() { return getToken(pinsParser.OP_ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitFunction_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_function_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(FUN);
			setState(94);
			match(IDENTIFIER);
			setState(95);
			match(OP_LPARENT);
			setState(96);
			parameters();
			setState(97);
			match(OP_RPARENT);
			setState(98);
			match(OP_COLON);
			setState(99);
			type();
			setState(100);
			match(OP_ASSIGN);
			setState(101);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_declarationContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(pinsParser.DECLARE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(pinsParser.IDENTIFIER, 0); }
		public TerminalNode OP_LPARENT() { return getToken(pinsParser.OP_LPARENT, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode OP_RPARENT() { return getToken(pinsParser.OP_RPARENT, 0); }
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitFunction_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_declarationContext function_declaration() throws RecognitionException {
		Function_declarationContext _localctx = new Function_declarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(DECLARE);
			setState(104);
			match(IDENTIFIER);
			setState(105);
			match(OP_LPARENT);
			setState(106);
			parameters();
			setState(107);
			match(OP_RPARENT);
			setState(108);
			match(OP_COLON);
			setState(109);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(pinsParser.IDENTIFIER, 0); }
		public TerminalNode AT_LOGICAL() { return getToken(pinsParser.AT_LOGICAL, 0); }
		public TerminalNode AT_INTEGER() { return getToken(pinsParser.AT_INTEGER, 0); }
		public TerminalNode AT_STRING() { return getToken(pinsParser.AT_STRING, 0); }
		public TerminalNode ARR() { return getToken(pinsParser.ARR, 0); }
		public TerminalNode OP_LBRACKET() { return getToken(pinsParser.OP_LBRACKET, 0); }
		public TerminalNode C_INTEGER() { return getToken(pinsParser.C_INTEGER, 0); }
		public TerminalNode OP_RBRACKET() { return getToken(pinsParser.OP_RBRACKET, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(IDENTIFIER);
				}
				break;
			case AT_LOGICAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(AT_LOGICAL);
				}
				break;
			case AT_INTEGER:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				match(AT_INTEGER);
				}
				break;
			case AT_STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				match(AT_STRING);
				}
				break;
			case ARR:
				enterOuterAlt(_localctx, 5);
				{
				setState(115);
				match(ARR);
				setState(116);
				match(OP_LBRACKET);
				setState(117);
				match(C_INTEGER);
				setState(118);
				match(OP_RBRACKET);
				setState(119);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public Parameters2Context parameters2() {
			return getRuleContext(Parameters2Context.class,0);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameters);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			parameter();
			setState(123);
			parameters2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Parameters2Context extends ParserRuleContext {
		public TerminalNode OP_COMMA() { return getToken(pinsParser.OP_COMMA, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Parameters2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters2; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitParameters2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parameters2Context parameters2() throws RecognitionException {
		Parameters2Context _localctx = new Parameters2Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_parameters2);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OP_COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(OP_COMMA);
				setState(126);
				parameters();
				}
				break;
			case OP_RPARENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(pinsParser.IDENTIFIER, 0); }
		public TerminalNode OP_COLON() { return getToken(pinsParser.OP_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OP_VARARG() { return getToken(pinsParser.OP_VARARG, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_parameter);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				match(IDENTIFIER);
				setState(131);
				match(OP_COLON);
				setState(132);
				type();
				}
				break;
			case OP_VARARG:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				match(OP_VARARG);
				}
				break;
			case OP_RPARENT:
			case OP_COMMA:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Logical_ior_expressionContext logical_ior_expression() {
			return getRuleContext(Logical_ior_expressionContext.class,0);
		}
		public Expression2Context expression2() {
			return getRuleContext(Expression2Context.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			logical_ior_expression();
			setState(138);
			expression2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expression2Context extends ParserRuleContext {
		public TerminalNode OP_LBRACE() { return getToken(pinsParser.OP_LBRACE, 0); }
		public TerminalNode WHERE() { return getToken(pinsParser.WHERE, 0); }
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode OP_RBRACE() { return getToken(pinsParser.OP_RBRACE, 0); }
		public Expression2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression2; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitExpression2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expression2Context expression2() throws RecognitionException {
		Expression2Context _localctx = new Expression2Context(_ctx, getState());
		enterRule(_localctx, 26, RULE_expression2);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OP_LBRACE:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				match(OP_LBRACE);
				setState(141);
				match(WHERE);
				setState(142);
				definitions();
				setState(143);
				match(OP_RBRACE);
				}
				break;
			case EOF:
			case ELSE:
			case THEN:
			case OP_RPARENT:
			case OP_RBRACKET:
			case OP_RBRACE:
			case OP_COLON:
			case OP_SEMICOLON:
			case OP_COMMA:
			case OP_ASSIGN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logical_ior_expressionContext extends ParserRuleContext {
		public Logical_and_expressionContext logical_and_expression() {
			return getRuleContext(Logical_and_expressionContext.class,0);
		}
		public Logical_ior_expression2Context logical_ior_expression2() {
			return getRuleContext(Logical_ior_expression2Context.class,0);
		}
		public Logical_ior_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_ior_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pinsParserVisitor ) return ((pinsParserVisitor<? extends T>)visitor).visitLogical_ior_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logical_ior_expressionContext logical_ior_expression() throws RecognitionException {
		Logical_ior_expressionContext _localctx = new Logical_ior_expressionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_logical_ior_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			logical_and_expression();
			setState(149);
			logical_ior_expression2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
